--- a/spec/fixtures/views/Band_bands_managements_uses_CRUD-new-error/view.html
+++ b/spec/fixtures/views/Band_bands_managements_uses_CRUD-new-error/view.html
@@ -132,22 +132,22 @@ Erweitert
 <div class='card-body'>
 <div class='row'>
 <div class='col-md-4 text-center'>
-<form class="simple_form new_band" id="new_band" novalidate="novalidate" action="/2024/mv-cup/bands" accept-charset="UTF-8" method="post"><div class="form-group my-2 hidden band_name form-group-valid"><input class="form-control hidden" value="Frauen" autocomplete="off" type="hidden" name="band[name]" id="band_name" /></div>
-<div class="form-group my-2 hidden band_gender form-group-invalid"><input class="form-control is-invalid hidden" value="female" aria-invalid="true" autocomplete="off" type="hidden" name="band[gender]" id="band_gender" /><div class="invalid-feedback">Geschlecht muss ausgefüllt werden</div></div>
+<form class="simple_form new_band" id="new_band" novalidate="novalidate" action="/2024/mv-cup/bands" accept-charset="UTF-8" method="post"><div class="form-group hidden band_name form-group-valid"><input class="form-control hidden" value="Frauen" autocomplete="off" type="hidden" name="band[name]" id="band_name" /></div>
+<div class="form-group hidden band_gender form-group-invalid"><input class="form-control is-invalid hidden" value="female" aria-invalid="true" autocomplete="off" type="hidden" name="band[gender]" id="band_gender" /><div class="invalid-feedback">Geschlecht muss ausgefüllt werden</div></div>
 <div class='d-grid'>
 <input type="submit" name="commit" value="Frauen" class="btn btn-light" data-disable-with="Frauen" />
 </div>
 </form></div>
 <div class='col-md-4 text-center'>
-<form class="simple_form new_band" id="new_band" novalidate="novalidate" action="/2024/mv-cup/bands" accept-charset="UTF-8" method="post"><div class="form-group my-2 hidden band_name form-group-valid"><input class="form-control hidden" value="Männer" autocomplete="off" type="hidden" name="band[name]" id="band_name" /></div>
-<div class="form-group my-2 hidden band_gender form-group-invalid"><input class="form-control is-invalid hidden" value="male" aria-invalid="true" autocomplete="off" type="hidden" name="band[gender]" id="band_gender" /><div class="invalid-feedback">Geschlecht muss ausgefüllt werden</div></div>
+<form class="simple_form new_band" id="new_band" novalidate="novalidate" action="/2024/mv-cup/bands" accept-charset="UTF-8" method="post"><div class="form-group hidden band_name form-group-valid"><input class="form-control hidden" value="Männer" autocomplete="off" type="hidden" name="band[name]" id="band_name" /></div>
+<div class="form-group hidden band_gender form-group-invalid"><input class="form-control is-invalid hidden" value="male" aria-invalid="true" autocomplete="off" type="hidden" name="band[gender]" id="band_gender" /><div class="invalid-feedback">Geschlecht muss ausgefüllt werden</div></div>
 <div class='d-grid'>
 <input type="submit" name="commit" value="Männer" class="btn btn-light" data-disable-with="Männer" />
 </div>
 </form></div>
 <div class='col-md-4 text-center'>
-<form class="simple_form new_band" id="new_band" novalidate="novalidate" action="/2024/mv-cup/bands" accept-charset="UTF-8" method="post"><div class="form-group my-2 hidden band_name form-group-valid"><input class="form-control hidden" value="Erwachsene" autocomplete="off" type="hidden" name="band[name]" id="band_name" /></div>
-<div class="form-group my-2 hidden band_gender form-group-invalid"><input class="form-control is-invalid hidden" value="indifferent" aria-invalid="true" autocomplete="off" type="hidden" name="band[gender]" id="band_gender" /><div class="invalid-feedback">Geschlecht muss ausgefüllt werden</div></div>
+<form class="simple_form new_band" id="new_band" novalidate="novalidate" action="/2024/mv-cup/bands" accept-charset="UTF-8" method="post"><div class="form-group hidden band_name form-group-valid"><input class="form-control hidden" value="Erwachsene" autocomplete="off" type="hidden" name="band[name]" id="band_name" /></div>
+<div class="form-group hidden band_gender form-group-invalid"><input class="form-control is-invalid hidden" value="indifferent" aria-invalid="true" autocomplete="off" type="hidden" name="band[gender]" id="band_gender" /><div class="invalid-feedback">Geschlecht muss ausgefüllt werden</div></div>
 <div class='d-grid'>
 <input type="submit" name="commit" value="Erwachsene" class="btn btn-light" data-disable-with="Erwachsene" />
 </div>
@@ -166,22 +166,22 @@ Erweitert
 <div class='card-body'>
 <div class='row'>
 <div class='col-md-4 text-center'>
-<form class="simple_form new_band" id="new_band" novalidate="novalidate" action="/2024/mv-cup/bands" accept-charset="UTF-8" method="post"><div class="form-group my-2 hidden band_name form-group-valid"><input class="form-control hidden" value="Mädchen" autocomplete="off" type="hidden" name="band[name]" id="band_name" /></div>
-<div class="form-group my-2 hidden band_gender form-group-invalid"><input class="form-control is-invalid hidden" value="female" aria-invalid="true" autocomplete="off" type="hidden" name="band[gender]" id="band_gender" /><div class="invalid-feedback">Geschlecht muss ausgefüllt werden</div></div>
+<form class="simple_form new_band" id="new_band" novalidate="novalidate" action="/2024/mv-cup/bands" accept-charset="UTF-8" method="post"><div class="form-group hidden band_name form-group-valid"><input class="form-control hidden" value="Mädchen" autocomplete="off" type="hidden" name="band[name]" id="band_name" /></div>
+<div class="form-group hidden band_gender form-group-invalid"><input class="form-control is-invalid hidden" value="female" aria-invalid="true" autocomplete="off" type="hidden" name="band[gender]" id="band_gender" /><div class="invalid-feedback">Geschlecht muss ausgefüllt werden</div></div>
 <div class='d-grid'>
 <input type="submit" name="commit" value="Mädchen" class="btn btn-light" data-disable-with="Mädchen" />
 </div>
 </form></div>
 <div class='col-md-4 text-center'>
-<form class="simple_form new_band" id="new_band" novalidate="novalidate" action="/2024/mv-cup/bands" accept-charset="UTF-8" method="post"><div class="form-group my-2 hidden band_name form-group-valid"><input class="form-control hidden" value="Jungen" autocomplete="off" type="hidden" name="band[name]" id="band_name" /></div>
-<div class="form-group my-2 hidden band_gender form-group-invalid"><input class="form-control is-invalid hidden" value="male" aria-invalid="true" autocomplete="off" type="hidden" name="band[gender]" id="band_gender" /><div class="invalid-feedback">Geschlecht muss ausgefüllt werden</div></div>
+<form class="simple_form new_band" id="new_band" novalidate="novalidate" action="/2024/mv-cup/bands" accept-charset="UTF-8" method="post"><div class="form-group hidden band_name form-group-valid"><input class="form-control hidden" value="Jungen" autocomplete="off" type="hidden" name="band[name]" id="band_name" /></div>
+<div class="form-group hidden band_gender form-group-invalid"><input class="form-control is-invalid hidden" value="male" aria-invalid="true" autocomplete="off" type="hidden" name="band[gender]" id="band_gender" /><div class="invalid-feedback">Geschlecht muss ausgefüllt werden</div></div>
 <div class='d-grid'>
 <input type="submit" name="commit" value="Jungen" class="btn btn-light" data-disable-with="Jungen" />
 </div>
 </form></div>
 <div class='col-md-4 text-center'>
-<form class="simple_form new_band" id="new_band" novalidate="novalidate" action="/2024/mv-cup/bands" accept-charset="UTF-8" method="post"><div class="form-group my-2 hidden band_name form-group-valid"><input class="form-control hidden" value="Jugend" autocomplete="off" type="hidden" name="band[name]" id="band_name" /></div>
-<div class="form-group my-2 hidden band_gender form-group-invalid"><input class="form-control is-invalid hidden" value="indifferent" aria-invalid="true" autocomplete="off" type="hidden" name="band[gender]" id="band_gender" /><div class="invalid-feedback">Geschlecht muss ausgefüllt werden</div></div>
+<form class="simple_form new_band" id="new_band" novalidate="novalidate" action="/2024/mv-cup/bands" accept-charset="UTF-8" method="post"><div class="form-group hidden band_name form-group-valid"><input class="form-control hidden" value="Jugend" autocomplete="off" type="hidden" name="band[name]" id="band_name" /></div>
+<div class="form-group hidden band_gender form-group-invalid"><input class="form-control is-invalid hidden" value="indifferent" aria-invalid="true" autocomplete="off" type="hidden" name="band[gender]" id="band_gender" /><div class="invalid-feedback">Geschlecht muss ausgefüllt werden</div></div>
 <div class='d-grid'>
 <input type="submit" name="commit" value="Jugend" class="btn btn-light" data-disable-with="Jugend" />
 </div>
@@ -200,10 +200,10 @@ Erweitert
 </div>
 </div>
 <div class='card-body'>
-<fieldset class="form-group my-2 radio_buttons required band_gender form-group-invalid"><div class="col-form-label pt-0">Geschlecht <abbr title="required">*</abbr></div><input type="hidden" name="band[gender]" value="" autocomplete="off" /><div class="form-check"><input class="form-check-input is-invalid radio_buttons required" aria-invalid="true" type="radio" value="female" name="band[gender]" id="band_gender_female" /><label class="form-check-label collection_radio_buttons" for="band_gender_female">weiblich</label></div><div class="form-check"><input class="form-check-input is-invalid radio_buttons required" aria-invalid="true" type="radio" value="male" name="band[gender]" id="band_gender_male" /><label class="form-check-label collection_radio_buttons" for="band_gender_male">männlich</label></div><div class="form-check"><input class="form-check-input is-invalid radio_buttons required" aria-invalid="true" type="radio" value="indifferent" name="band[gender]" id="band_gender_indifferent" /><label class="form-check-label collection_radio_buttons" for="band_gender_indifferent">ungeschlechtlich</label></div><div class="invalid-feedback d-block">Geschlecht muss ausgefüllt werden</div></fieldset>
-<div class="form-group my-2 string required band_name form-group-valid"><label class="control-label string required" for="band_name">Name <abbr title="required">*</abbr></label><input class="form-control string required" type="text" value="Foo" name="band[name]" id="band_name" /></div>
-<div class="form-group my-2 string optional band_person_tag_names"><label class="control-label string optional" for="band_person_tag_names">Mögliche Kennzeichnungen für Wettkämpfer</label><input class="form-control string optional" type="text" value="" name="band[person_tag_names]" id="band_person_tag_names" /><small class="form-text text-muted">Werte mit Komma abtrennen, z.B.: U20, Gäste</small></div>
-<div class="form-group my-2 string optional band_team_tag_names"><label class="control-label string optional" for="band_team_tag_names">Mögliche Kennzeichnungen für Mannschaften</label><input class="form-control string optional" type="text" value="" name="band[team_tag_names]" id="band_team_tag_names" /><small class="form-text text-muted">Werte mit Komma abtrennen, z.B.: BB-Cup, Ü40</small></div>
+<fieldset class="form-group radio_buttons required band_gender form-group-invalid"><div class="col-form-label pt-0">Geschlecht <abbr title="required">*</abbr></div><input type="hidden" name="band[gender]" value="" autocomplete="off" /><div class="form-check"><input class="form-check-input is-invalid radio_buttons required" aria-invalid="true" type="radio" value="female" name="band[gender]" id="band_gender_female" /><label class="form-check-label collection_radio_buttons" for="band_gender_female">weiblich</label></div><div class="form-check"><input class="form-check-input is-invalid radio_buttons required" aria-invalid="true" type="radio" value="male" name="band[gender]" id="band_gender_male" /><label class="form-check-label collection_radio_buttons" for="band_gender_male">männlich</label></div><div class="form-check"><input class="form-check-input is-invalid radio_buttons required" aria-invalid="true" type="radio" value="indifferent" name="band[gender]" id="band_gender_indifferent" /><label class="form-check-label collection_radio_buttons" for="band_gender_indifferent">ungeschlechtlich</label></div><div class="invalid-feedback d-block">Geschlecht muss ausgefüllt werden</div></fieldset>
+<div class="form-group string required band_name form-group-valid"><label class="control-label string required" for="band_name">Name <abbr title="required">*</abbr></label><input class="form-control string required" type="text" value="Foo" name="band[name]" id="band_name" /></div>
+<div class="form-group string optional band_person_tag_names"><label class="control-label string optional" for="band_person_tag_names">Mögliche Kennzeichnungen für Wettkämpfer</label><input class="form-control string optional" type="text" value="" name="band[person_tag_names]" id="band_person_tag_names" /><small class="form-text text-muted">Werte mit Komma abtrennen, z.B.: U20, Gäste</small></div>
+<div class="form-group string optional band_team_tag_names"><label class="control-label string optional" for="band_team_tag_names">Mögliche Kennzeichnungen für Mannschaften</label><input class="form-control string optional" type="text" value="" name="band[team_tag_names]" id="band_team_tag_names" /><small class="form-text text-muted">Werte mit Komma abtrennen, z.B.: BB-Cup, Ü40</small></div>
 
 </div>
 <div class='card-footer'>
