--- a/spec/fixtures/views/Competitions_AccessesController_accesses_managements_uses_CRUD-new-error/view.html
+++ b/spec/fixtures/views/Competitions_AccessesController_accesses_managements_uses_CRUD-new-error/view.html
@@ -118,8 +118,8 @@ Erweitert
 </div>
 </div>
 <div class='card-body'>
-<div class="form-group my-2 email required user_access_request_email form-group-invalid"><label class="control-label email required" for="user_access_request_email">E-Mail-Adresse <abbr title="required">*</abbr></label><input class="form-control is-invalid string email required" autofocus="autofocus" aria-invalid="true" type="email" value="foo" name="user_access_request[email]" id="user_access_request_email" /><div class="invalid-feedback">E-Mail-Adresse ist nicht gültig</div><small class="form-text text-muted">E-Mail-Adresse des zukünftigen Admins</small></div>
-<div class="form-group my-2 text required user_access_request_text form-group-valid"><label class="control-label text required" for="user_access_request_text">E-Mail-Text <abbr title="required">*</abbr></label><textarea class="form-control text required" rows="10" name="user_access_request[text]" id="user_access_request_text">
+<div class="form-group email required user_access_request_email form-group-invalid"><label class="control-label email required" for="user_access_request_email">E-Mail-Adresse <abbr title="required">*</abbr></label><input class="form-control is-invalid string email required" autofocus="autofocus" aria-invalid="true" type="email" value="foo" name="user_access_request[email]" id="user_access_request_email" /><div class="invalid-feedback">E-Mail-Adresse ist nicht gültig</div><small class="form-text text-muted">E-Mail-Adresse des zukünftigen Admins</small></div>
+<div class="form-group text required user_access_request_text form-group-valid"><label class="control-label text required" for="user_access_request_text">E-Mail-Text <abbr title="required">*</abbr></label><textarea class="form-control text required" rows="10" name="user_access_request[text]" id="user_access_request_text">
 Hallo,
 
 ich habe bei feusport.de einen neuen Wettkampf für dich angelegt. Wenn du auf den nachfolgenden Link klickst, kannst du die Kontrolle über den Wettkampf übernehmen.
