--- a/spec/fixtures/views/People_People_managements_uses_CRUD-edit/view.html
+++ b/spec/fixtures/views/People_People_managements_uses_CRUD-edit/view.html
@@ -133,7 +133,7 @@ Erweitert
 </div>
 </div>
 <div class='card-body'>
-<div class="form-group my-2 select required disabled person_band form-group-valid"><label class="control-label select required disabled" for="person_band_id">Wertungsgruppe <abbr title="required">*</abbr></label><select class="form-select select required disabled" disabled="disabled" name="person[band_id]" id="person_band_id"><option value="" label=" "></option>
+<div class="form-group select required disabled person_band form-group-valid"><label class="control-label select required disabled" for="person_band_id">Wertungsgruppe <abbr title="required">*</abbr></label><select class="form-select select required disabled" disabled="disabled" name="person[band_id]" id="person_band_id"><option value="" label=" "></option>
 <option selected="selected" value="UUID">Frauen</option></select></div>
 <div class='form-group string'>
 <label class='string control-label' for='person_suggestion'>Schnelleingabe</label>
@@ -144,10 +144,10 @@ Erweitert
 </div>
 <div class='row'>
 <div class='col-md-6'>
-<div class="form-group my-2 string required person_first_name form-group-valid"><label class="control-label string required" for="person_first_name">Vorname <abbr title="required">*</abbr></label><input class="form-control string required" type="text" value="first-name" name="person[first_name]" id="person_first_name" /></div>
+<div class="form-group string required person_first_name form-group-valid"><label class="control-label string required" for="person_first_name">Vorname <abbr title="required">*</abbr></label><input class="form-control string required" type="text" value="first-name" name="person[first_name]" id="person_first_name" /></div>
 </div>
 <div class='col-md-6'>
-<div class="form-group my-2 string required person_last_name form-group-valid"><label class="control-label string required" for="person_last_name">Nachname <abbr title="required">*</abbr></label><input class="form-control string required" type="text" value="last-name" name="person[last_name]" id="person_last_name" /></div>
+<div class="form-group string required person_last_name form-group-valid"><label class="control-label string required" for="person_last_name">Nachname <abbr title="required">*</abbr></label><input class="form-control string required" type="text" value="last-name" name="person[last_name]" id="person_last_name" /></div>
 </div>
 </div>
 <div class='row'>
