--- a/spec/fixtures/views/Score_List_create_lists_uses_list_factory-new-generator_params_track_change/view.html
+++ b/spec/fixtures/views/Score_List_create_lists_uses_list_factory-new-generator_params_track_change/view.html
@@ -133,8 +133,8 @@ Erweitert
 </div>
 </div>
 <div class='card-body'>
-<form class="simple_form edit_score_list_factory" id="edit_score_list_factory" novalidate="novalidate" action="/2024/mv-cup/score/list_factories" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off" /><div class="form-group my-2 hidden score_list_factory_next_step"><input class="form-control hidden" value="finish" autocomplete="off" type="hidden" name="score_list_factory[next_step]" id="score_list_factory_next_step" /></div>
-<div class="form-group my-2 select optional score_list_factory_before_list"><label class="control-label select optional" for="score_list_factory_before_list_id">Vorherige Liste</label><select class="form-select select optional" name="score_list_factory[before_list_id]" id="score_list_factory_before_list_id"></select></div>
+<form class="simple_form edit_score_list_factory" id="edit_score_list_factory" novalidate="novalidate" action="/2024/mv-cup/score/list_factories" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off" /><div class="form-group hidden score_list_factory_next_step"><input class="form-control hidden" value="finish" autocomplete="off" type="hidden" name="score_list_factory[next_step]" id="score_list_factory_next_step" /></div>
+<div class="form-group select optional score_list_factory_before_list"><label class="control-label select optional" for="score_list_factory_before_list_id">Vorherige Liste</label><select class="form-select select optional" name="score_list_factory[before_list_id]" id="score_list_factory_before_list_id"></select></div>
 <table class='table table-condensed'>
 <tr>
 <th class=''>Bahnwechsel</th>
@@ -148,7 +148,7 @@ Erweitert
 </div>
 <div class='card-footer'>
 <div class='d-flex justify-content-between align-items-start'>
-<div><form class="simple_form edit_score_list_factory" id="edit_score_list_factory" novalidate="novalidate" action="/2024/mv-cup/score/list_factories" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off" /><div class="form-group my-2 hidden score_list_factory_next_step"><input class="form-control hidden" value="generator" autocomplete="off" type="hidden" name="score_list_factory[next_step]" id="score_list_factory_next_step" /></div>
+<div><form class="simple_form edit_score_list_factory" id="edit_score_list_factory" novalidate="novalidate" action="/2024/mv-cup/score/list_factories" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off" /><div class="form-group hidden score_list_factory_next_step"><input class="form-control hidden" value="generator" autocomplete="off" type="hidden" name="score_list_factory[next_step]" id="score_list_factory_next_step" /></div>
 <input type="submit" name="commit" value="Zurück" class="btn btn-light btn-sm" data-disable-with="Zurück" />
 <a data-turbo-method="delete" data-turbo-confirm="Listenerstellung abbrechen?" class=" btn btn-light btn-sm" href="/2024/mv-cup/score/list_factories">Abbrechen</a>
 </form></div>
