--- a/spec/fixtures/views/Team_assessment_requests_can_manage_requests-edit-assessment-requests/view.html
+++ b/spec/fixtures/views/Team_assessment_requests_can_manage_requests-edit-assessment-requests/view.html
@@ -131,18 +131,18 @@ Erweitert
 <div class='card-body'>
 <div class='assessment-request'>
 <fieldset class="form-group boolean optional team_requests__destroy"><div class="form-check"><input name="team[requests_attributes][0][_destroy]" type="hidden" value="1" autocomplete="off" /><input class="form-check-input boolean optional" type="checkbox" value="0" checked="checked" name="team[requests_attributes][0][_destroy]" id="team_requests_attributes_0__destroy" /><label class="form-check-label boolean optional" for="team_requests_attributes_0__destroy">Teilnahme</label></div></fieldset>
-<div class="form-group my-2 hidden team_requests_assessment_id form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="UUID" name="team[requests_attributes][0][assessment_id]" id="team_requests_attributes_0_assessment_id" /></div>
+<div class="form-group hidden team_requests_assessment_id form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="UUID" name="team[requests_attributes][0][assessment_id]" id="team_requests_attributes_0_assessment_id" /></div>
 <div class='edit-assesment-type'>
-<div class="form-group my-2 select required team_requests_assessment_type form-group-valid"><label class="control-label select required" for="team_requests_attributes_0_assessment_type">Löschangriff Nass - Frauen <abbr title="required">*</abbr></label><select class="form-select select required" name="team[requests_attributes][0][assessment_type]" id="team_requests_attributes_0_assessment_type"><option value="" label=" "></option>
+<div class="form-group select required team_requests_assessment_type form-group-valid"><label class="control-label select required" for="team_requests_attributes_0_assessment_type">Löschangriff Nass - Frauen <abbr title="required">*</abbr></label><select class="form-select select required" name="team[requests_attributes][0][assessment_type]" id="team_requests_attributes_0_assessment_type"><option value="" label=" "></option>
 <option selected="selected" value="group_competitor">Mannschaftswertung</option>
 <option value="out_of_competition">Außer der Wertung</option></select></div>
 </div>
 <input autocomplete="off" type="hidden" value="UUID" name="team[requests_attributes][0][id]" id="team_requests_attributes_0_id" /></div>
 <div class='assessment-request'>
 <fieldset class="form-group boolean optional team_requests__destroy"><div class="form-check"><input name="team[requests_attributes][1][_destroy]" type="hidden" value="1" autocomplete="off" /><input class="form-check-input boolean optional" type="checkbox" value="0" name="team[requests_attributes][1][_destroy]" id="team_requests_attributes_1__destroy" /><label class="form-check-label boolean optional" for="team_requests_attributes_1__destroy">Teilnahme</label></div></fieldset>
-<div class="form-group my-2 hidden team_requests_assessment_id form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="UUID" name="team[requests_attributes][1][assessment_id]" id="team_requests_attributes_1_assessment_id" /></div>
+<div class="form-group hidden team_requests_assessment_id form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="UUID" name="team[requests_attributes][1][assessment_id]" id="team_requests_attributes_1_assessment_id" /></div>
 <div class='edit-assesment-type'>
-<div class="form-group my-2 select required team_requests_assessment_type form-group-valid"><label class="control-label select required" for="team_requests_attributes_1_assessment_type">TGL <abbr title="required">*</abbr></label><select class="form-select select required" name="team[requests_attributes][1][assessment_type]" id="team_requests_attributes_1_assessment_type"><option value="" label=" "></option>
+<div class="form-group select required team_requests_assessment_type form-group-valid"><label class="control-label select required" for="team_requests_attributes_1_assessment_type">TGL <abbr title="required">*</abbr></label><select class="form-select select required" name="team[requests_attributes][1][assessment_type]" id="team_requests_attributes_1_assessment_type"><option value="" label=" "></option>
 <option selected="selected" value="group_competitor">Mannschaftswertung</option>
 <option value="out_of_competition">Außer der Wertung</option></select></div>
 </div>
