--- a/spec/fixtures/views/Team_teams_managements_uses_CRUD-edit/view.html
+++ b/spec/fixtures/views/Team_teams_managements_uses_CRUD-edit/view.html
@@ -129,14 +129,14 @@ Erweitert
 </div>
 </div>
 <div class='card-body'>
-<div class="form-group my-2 select required disabled team_band form-group-valid"><label class="control-label select required disabled" for="team_band_id">Wertungsgruppe <abbr title="required">*</abbr></label><select class="form-select select required disabled" disabled="disabled" name="team[band_id]" id="team_band_id"><option value="" label=" "></option>
+<div class="form-group select required disabled team_band form-group-valid"><label class="control-label select required disabled" for="team_band_id">Wertungsgruppe <abbr title="required">*</abbr></label><select class="form-select select required disabled" disabled="disabled" name="team[band_id]" id="team_band_id"><option value="" label=" "></option>
 <option selected="selected" value="UUID">Frauen</option></select></div>
-<div class="form-group my-2 string required team_name form-group-valid"><label class="control-label string required" for="team_name">Name <abbr title="required">*</abbr></label><input class="form-control string required" autocomplete="off" type="text" value="new-name" name="team[name]" id="team_name" /><small class="form-text text-muted">Keine Nummern im Namen angeben!</small></div>
+<div class="form-group string required team_name form-group-valid"><label class="control-label string required" for="team_name">Name <abbr title="required">*</abbr></label><input class="form-control string required" autocomplete="off" type="text" value="new-name" name="team[name]" id="team_name" /><small class="form-text text-muted">Keine Nummern im Namen angeben!</small></div>
 <div class='suggestions-entries for-teams'>
 <table class='table table-hover table-condensed'></table>
 </div>
-<div class="form-group my-2 string required team_shortcut form-group-valid"><label class="control-label string required" for="team_shortcut">Abkürzung <abbr title="required">*</abbr></label><input class="form-control string required" maxlength="12" size="12" type="text" value="new-n" name="team[shortcut]" id="team_shortcut" /><small class="form-text text-muted">Keine Nummern im Namen angeben!</small></div>
-<div class="form-group my-2 integer required team_number form-group-valid"><label class="control-label integer required" for="team_number">Nummer <abbr title="required">*</abbr></label><input class="form-control numeric integer required" type="number" step="1" value="1" name="team[number]" id="team_number" /><small class="form-text text-muted">Die Nummer wird erst angezeigt, wenn es mehrere Mannschaften mit gleichen Namen gibt.</small></div>
+<div class="form-group string required team_shortcut form-group-valid"><label class="control-label string required" for="team_shortcut">Abkürzung <abbr title="required">*</abbr></label><input class="form-control string required" maxlength="12" size="12" type="text" value="new-n" name="team[shortcut]" id="team_shortcut" /><small class="form-text text-muted">Keine Nummern im Namen angeben!</small></div>
+<div class="form-group integer required team_number form-group-valid"><label class="control-label integer required" for="team_number">Nummer <abbr title="required">*</abbr></label><input class="form-control numeric integer required" type="number" step="1" value="1" name="team[number]" id="team_number" /><small class="form-text text-muted">Die Nummer wird erst angezeigt, wenn es mehrere Mannschaften mit gleichen Namen gibt.</small></div>
 <input autocomplete="off" type="hidden" name="team[fire_sport_statistics_team_id]" id="team_fire_sport_statistics_team_id" />
 <div class='mb-0 mt-3'>Verknüpfung</div>
 <div class='alert alert-success mb-0 d-none' id='fire-sport-connected'>
