--- a/spec/fixtures/views/User_GET_users_sign_in_renders_the_login_form/view.html
+++ b/spec/fixtures/views/User_GET_users_sign_in_renders_the_login_form/view.html
@@ -83,8 +83,8 @@
 </div>
 </div>
 <div class='card-body'>
-<div class="form-group my-2 email optional user_email"><label class="control-label email optional" for="user_email">E-Mail-Adresse</label><input class="form-control string email optional" autocomplete="email" autofocus="autofocus" type="email" name="user[email]" id="user_email" /></div>
-<div class="form-group my-2 password optional user_password"><label class="control-label password optional" for="user_password">Passwort</label><input class="form-control password optional" autocomplete="current-password" type="password" name="user[password]" id="user_password" /></div>
+<div class="form-group email optional user_email"><label class="control-label email optional" for="user_email">E-Mail-Adresse</label><input class="form-control string email optional" autocomplete="email" autofocus="autofocus" type="email" name="user[email]" id="user_email" /></div>
+<div class="form-group password optional user_password"><label class="control-label password optional" for="user_password">Passwort</label><input class="form-control password optional" autocomplete="current-password" type="password" name="user[password]" id="user_password" /></div>
 <fieldset class="form-group boolean optional user_remember_me"><div class="form-check"><input name="user[remember_me]" type="hidden" value="0" autocomplete="off" /><input class="form-check-input boolean optional" type="checkbox" value="1" name="user[remember_me]" id="user_remember_me" /><label class="form-check-label boolean optional" for="user_remember_me">Eingeloggt bleiben</label></div></fieldset>
 
 </div>
