--- a/spec/fixtures/views/User_GET_users_sign_up_renders_registration_form/view.html
+++ b/spec/fixtures/views/User_GET_users_sign_up_renders_registration_form/view.html
@@ -83,10 +83,10 @@
 </div>
 </div>
 <div class='card-body'>
-<div class="form-group my-2 string required user_name"><label class="control-label string required" for="user_name">Name <abbr title="required">*</abbr></label><input class="form-control string required" autocomplete="name" autofocus="autofocus" type="text" name="user[name]" id="user_name" /></div>
-<div class="form-group my-2 email required user_email"><label class="control-label email required" for="user_email">E-Mail-Adresse <abbr title="required">*</abbr></label><input class="form-control string email required" autocomplete="email" type="email" name="user[email]" id="user_email" /></div>
-<div class="form-group my-2 password required user_password"><label class="control-label password required" for="user_password">Passwort <abbr title="required">*</abbr></label><input class="form-control password required" autocomplete="new-password" required="required" aria-required="true" type="password" name="user[password]" id="user_password" /></div>
-<div class="form-group my-2 password required user_password_confirmation"><label class="control-label password required" for="user_password_confirmation">Passwortbestätigung <abbr title="required">*</abbr></label><input class="form-control password required" autocomplete="new-password" required="required" aria-required="true" type="password" name="user[password_confirmation]" id="user_password_confirmation" /></div>
+<div class="form-group string required user_name"><label class="control-label string required" for="user_name">Name <abbr title="required">*</abbr></label><input class="form-control string required" autocomplete="name" autofocus="autofocus" type="text" name="user[name]" id="user_name" /></div>
+<div class="form-group email required user_email"><label class="control-label email required" for="user_email">E-Mail-Adresse <abbr title="required">*</abbr></label><input class="form-control string email required" autocomplete="email" type="email" name="user[email]" id="user_email" /></div>
+<div class="form-group password required user_password"><label class="control-label password required" for="user_password">Passwort <abbr title="required">*</abbr></label><input class="form-control password required" autocomplete="new-password" required="required" aria-required="true" type="password" name="user[password]" id="user_password" /></div>
+<div class="form-group password required user_password_confirmation"><label class="control-label password required" for="user_password_confirmation">Passwortbestätigung <abbr title="required">*</abbr></label><input class="form-control password required" autocomplete="new-password" required="required" aria-required="true" type="password" name="user[password_confirmation]" id="user_password_confirmation" /></div>
 
 </div>
 <div class='card-footer'>
