--- a/spec/fixtures/views/competition_team_imports_team_import_process_uses_import_rows-new/view.html
+++ b/spec/fixtures/views/competition_team_imports_team_import_process_uses_import_rows-new/view.html
@@ -117,8 +117,8 @@ Erweitert
 </div>
 </div>
 <div class='card-body'>
-<fieldset class="form-group my-2 radio_buttons required team_import_band_id"><div class="col-form-label pt-0">Wertungsgruppe <abbr title="required">*</abbr></div><input type="hidden" name="team_import[band_id]" value="" autocomplete="off" /><div class="form-check"><input class="form-check-input radio_buttons required" required="required" aria-required="true" type="radio" value="UUID" name="team_import[band_id]" id="team_import_band_id_UUID" /><label class="form-check-label collection_radio_buttons" for="team_import_band_id_UUID">Frauen</label></div></fieldset>
-<div class="form-group my-2 text required team_import_import_rows"><label class="control-label text required" for="team_import_import_rows">Namen <abbr title="required">*</abbr></label><textarea class="form-control text required" required="required" aria-required="true" name="team_import[import_rows]" id="team_import_import_rows">
+<fieldset class="form-group radio_buttons required team_import_band_id"><div class="col-form-label pt-0">Wertungsgruppe <abbr title="required">*</abbr></div><input type="hidden" name="team_import[band_id]" value="" autocomplete="off" /><div class="form-check"><input class="form-check-input radio_buttons required" required="required" aria-required="true" type="radio" value="UUID" name="team_import[band_id]" id="team_import_band_id_UUID" /><label class="form-check-label collection_radio_buttons" for="team_import_band_id_UUID">Frauen</label></div></fieldset>
+<div class="form-group text required team_import_import_rows"><label class="control-label text required" for="team_import_import_rows">Namen <abbr title="required">*</abbr></label><textarea class="form-control text required" required="required" aria-required="true" name="team_import[import_rows]" id="team_import_import_rows">
 </textarea><small class="form-text text-muted">Bitte die Namen Zeilenweise angeben</small></div>
 <small class="form-text text-muted">Mannschaften, die schon vorhanden sind, werden übersprungen und nicht erneut angelegt.</small>
 
