--- a/spec/fixtures/views/competitions_certificates_lists_create_certificates_uses_template_and_results-new/view.html
+++ b/spec/fixtures/views/competitions_certificates_lists_create_certificates_uses_template_and_results-new/view.html
@@ -133,10 +133,10 @@ Erweitert
 </div>
 </div>
 <div class='card-body'>
-<div class="form-group my-2 select optional certificates_list_template_id"><label class="control-label select optional" for="certificates_list_template_id">Urkundenvorlage</label><select class="form-select select optional" name="certificates_list[template_id]" id="certificates_list_template_id"><option value="UUID">Einfache Vorlage</option></select></div>
+<div class="form-group select optional certificates_list_template_id"><label class="control-label select optional" for="certificates_list_template_id">Urkundenvorlage</label><select class="form-select select optional" name="certificates_list[template_id]" id="certificates_list_template_id"><option value="UUID">Einfache Vorlage</option></select></div>
 <fieldset class="form-group boolean optional certificates_list_background_image form-group-valid"><div class="form-check"><input name="certificates_list[background_image]" type="hidden" value="0" autocomplete="off" /><input class="form-check-input boolean optional" type="checkbox" value="1" checked="checked" name="certificates_list[background_image]" id="certificates_list_background_image" /><label class="form-check-label boolean optional" for="certificates_list_background_image">Hintergrundbild einbetten</label></div></fieldset>
 <div class='row'>
-<div class='col-md-5'><div class="form-group my-2 select optional certificates_list_score_result_id"><label class="control-label select optional" for="certificates_list_score_result_id">Ergebnisliste</label><select class="form-select select optional" name="certificates_list[score_result_id]" id="certificates_list_score_result_id"><option value="" label=" "></option>
+<div class='col-md-5'><div class="form-group select optional certificates_list_score_result_id"><label class="control-label select optional" for="certificates_list_score_result_id">Ergebnisliste</label><select class="form-select select optional" name="certificates_list[score_result_id]" id="certificates_list_score_result_id"><option value="" label=" "></option>
 <option value="UUID">Hakenleitersteigen - Frauen</option></select></div></div>
 </div>
 <div class='row'>
@@ -144,7 +144,7 @@ Erweitert
 <div class='col-md-3'>oder</div>
 </div>
 <div class='row'>
-<div class='col-md-5'><div class="form-group my-2 select optional certificates_list_competition_result_id"><label class="control-label select optional" for="certificates_list_competition_result_id">Gesamtwertung</label><select class="form-select select optional" name="certificates_list[competition_result_id]" id="certificates_list_competition_result_id"><option value="" label=" "></option>
+<div class='col-md-5'><div class="form-group select optional certificates_list_competition_result_id"><label class="control-label select optional" for="certificates_list_competition_result_id">Gesamtwertung</label><select class="form-select select optional" name="certificates_list[competition_result_id]" id="certificates_list_competition_result_id"><option value="" label=" "></option>
 </select></div></div>
 </div>
 <div class='row'>
@@ -152,7 +152,7 @@ Erweitert
 <div class='col-md-3'>oder</div>
 </div>
 <div class='row'>
-<div class='col-md-5'><div class="form-group my-2 select optional certificates_list_group_score_result_id"><label class="control-label select optional" for="certificates_list_group_score_result_id">Mannschaftwertung</label><select class="form-select select optional" name="certificates_list[group_score_result_id]" id="certificates_list_group_score_result_id"><option value="" label=" "></option>
+<div class='col-md-5'><div class="form-group select optional certificates_list_group_score_result_id"><label class="control-label select optional" for="certificates_list_group_score_result_id">Mannschaftwertung</label><select class="form-select select optional" name="certificates_list[group_score_result_id]" id="certificates_list_group_score_result_id"><option value="" label=" "></option>
 </select></div></div>
 </div>
 
