--- a/spec/fixtures/views/competitions_editings_edit_competition_uses_CRUD-edit/view.html
+++ b/spec/fixtures/views/competitions_editings_edit_competition_uses_CRUD-edit/view.html
@@ -117,10 +117,10 @@ Erweitert
 </div>
 </div>
 <div class='card-body'>
-<div class="form-group my-2 string required competition_name form-group-valid"><label class="control-label string required" for="competition_name">Name <abbr title="required">*</abbr></label><input class="form-control string required" autofocus="autofocus" type="text" value="MV-Cup" name="competition[name]" id="competition_name" /><small class="form-text text-muted">Gib einen kurzen Namen an. Das Datum erscheint extra und braucht nicht im Namen auftauchen.</small></div>
+<div class="form-group string required competition_name form-group-valid"><label class="control-label string required" for="competition_name">Name <abbr title="required">*</abbr></label><input class="form-control string required" autofocus="autofocus" type="text" value="MV-Cup" name="competition[name]" id="competition_name" /><small class="form-text text-muted">Gib einen kurzen Namen an. Das Datum erscheint extra und braucht nicht im Namen auftauchen.</small></div>
 <div class="form-group date required competition_date form-group-valid"><label class="date required" for="competition_date">Datum <abbr title="required">*</abbr></label><div class="d-flex flex-row justify-content-between align-items-center"><input class="form-control mx-1 date required" value="2024-02-29" type="date" name="competition[date]" id="competition_date" /></div><small class="form-text text-muted">Sollte sich der Wettkampf über mehrere Tage erstrecken, gib den Haupttag an. Weiteres musst du in der Beschreibung ergänzen.</small></div>
-<div class="form-group my-2 string required competition_place form-group-valid"><label class="control-label string required" for="competition_place">Ort <abbr title="required">*</abbr></label><input class="form-control string required" type="text" value="Rostock" name="competition[place]" id="competition_place" /><small class="form-text text-muted">Es sieht besser aus, wenn du hier nur den Namen des Ortes schreibst. Die vollständige Adresse solltest du in der Beschreibung angeben.</small></div>
-<div class="form-group my-2 text optional competition_description form-group-valid"><label class="control-label text optional" for="competition_description">Description</label><textarea class="form-control text optional easymde-required" name="competition[description]" id="competition_description">
+<div class="form-group string required competition_place form-group-valid"><label class="control-label string required" for="competition_place">Ort <abbr title="required">*</abbr></label><input class="form-control string required" type="text" value="Rostock" name="competition[place]" id="competition_place" /><small class="form-text text-muted">Es sieht besser aus, wenn du hier nur den Namen des Ortes schreibst. Die vollständige Adresse solltest du in der Beschreibung angeben.</small></div>
+<div class="form-group text optional competition_description form-group-valid"><label class="control-label text optional" for="competition_description">Description</label><textarea class="form-control text optional easymde-required" name="competition[description]" id="competition_description">
 Der Wettkampf *MV-Cup* findet am **29.02.2024** in **Rostock** statt.
 
 Weitere Informationen folgen.</textarea></div>
@@ -139,10 +139,10 @@ Weitere Informationen folgen.</textarea></div>
 <legend>Flyer</legend>
 <div class='row'>
 <div class='col-md-6'>
-<div class="form-group my-2 string optional competition_flyer_headline form-group-valid"><label class="control-label string optional" for="competition_flyer_headline">Flyer-Überschrift</label><input class="form-control string optional" type="text" value="Webseite mit Ergebnissen im Internet" name="competition[flyer_headline]" id="competition_flyer_headline" /></div>
+<div class="form-group string optional competition_flyer_headline form-group-valid"><label class="control-label string optional" for="competition_flyer_headline">Flyer-Überschrift</label><input class="form-control string optional" type="text" value="Webseite mit Ergebnissen im Internet" name="competition[flyer_headline]" id="competition_flyer_headline" /></div>
 </div>
 <div class='col-md-6'>
-<div class="form-group my-2 text optional competition_flyer_content form-group-valid"><label class="control-label text optional" for="competition_flyer_content">Flyer-Inhalt</label><textarea class="form-control text optional" name="competition[flyer_content]" id="competition_flyer_content">
+<div class="form-group text optional competition_flyer_content form-group-valid"><label class="control-label text optional" for="competition_flyer_content">Flyer-Inhalt</label><textarea class="form-control text optional" name="competition[flyer_content]" id="competition_flyer_content">
 - Ergebnisse
 - Startlisten</textarea></div>
 </div>
