--- a/spec/fixtures/views/People_People_managements_uses_CRUD-new/view.html
+++ b/spec/fixtures/views/People_People_managements_uses_CRUD-new/view.html
@@ -134,7 +134,7 @@ Erweitert
 </div>
 <div class='card-body'>
 <input type="hidden" name="band_id" id="band_id" value="UUID" autocomplete="off" />
-<div class="form-group my-2 select required disabled person_band form-group-valid"><label class="control-label select required disabled" for="person_band_id">Wertungsgruppe <abbr title="required">*</abbr></label><select class="form-select select required disabled" disabled="disabled" name="person[band_id]" id="person_band_id"><option value="" label=" "></option>
+<div class="form-group select required disabled person_band form-group-valid"><label class="control-label select required disabled" for="person_band_id">Wertungsgruppe <abbr title="required">*</abbr></label><select class="form-select select required disabled" disabled="disabled" name="person[band_id]" id="person_band_id"><option value="" label=" "></option>
 <option selected="selected" value="UUID">Frauen</option></select></div>
 <div class='form-group string'>
 <label class='string control-label' for='person_suggestion'>Schnelleingabe</label>
@@ -145,21 +145,21 @@ Erweitert
 </div>
 <div class='row'>
 <div class='col-md-6'>
-<div class="form-group my-2 string required person_first_name"><label class="control-label string required" for="person_first_name">Vorname <abbr title="required">*</abbr></label><input class="form-control string required" type="text" name="person[first_name]" id="person_first_name" /></div>
+<div class="form-group string required person_first_name"><label class="control-label string required" for="person_first_name">Vorname <abbr title="required">*</abbr></label><input class="form-control string required" type="text" name="person[first_name]" id="person_first_name" /></div>
 </div>
 <div class='col-md-6'>
-<div class="form-group my-2 string required person_last_name"><label class="control-label string required" for="person_last_name">Nachname <abbr title="required">*</abbr></label><input class="form-control string required" type="text" name="person[last_name]" id="person_last_name" /></div>
+<div class="form-group string required person_last_name"><label class="control-label string required" for="person_last_name">Nachname <abbr title="required">*</abbr></label><input class="form-control string required" type="text" name="person[last_name]" id="person_last_name" /></div>
 </div>
 </div>
 <div class='row'>
 <div class='col-md-6'>
-<div class="form-group my-2 select optional person_team"><label class="control-label select optional" for="person_team_id">Vorhandene Mannschaft</label><select class="form-select select optional" name="person[team_id]" id="person_team_id"><option value="" label=" "></option>
+<div class="form-group select optional person_team"><label class="control-label select optional" for="person_team_id">Vorhandene Mannschaft</label><select class="form-select select optional" name="person[team_id]" id="person_team_id"><option value="" label=" "></option>
 </select></div>
 </div>
 <div class='col-md-6'>
 <datalist id='team-names'>
 </datalist>
-<div class="form-group my-2 string optional person_create_team_name"><label class="control-label string optional" for="person_create_team_name">Neue Mannschaft</label><input class="form-control string optional" list="team-names" type="text" name="person[create_team_name]" id="person_create_team_name" /></div>
+<div class="form-group string optional person_create_team_name"><label class="control-label string optional" for="person_create_team_name">Neue Mannschaft</label><input class="form-control string optional" list="team-names" type="text" name="person[create_team_name]" id="person_create_team_name" /></div>
 </div>
 </div>
 <input autocomplete="off" type="hidden" name="person[fire_sport_statistics_person_id]" id="person_fire_sport_statistics_person_id" />
