--- a/spec/fixtures/views/Score_ListPrintGenerator_manage_list_print_generators_uses_CRUD-edit/view.html
+++ b/spec/fixtures/views/Score_ListPrintGenerator_manage_list_print_generators_uses_CRUD-edit/view.html
@@ -122,7 +122,7 @@ Erweitert
 <div class='pb-4 mt-4 container'>
 <div class='row mb-3'>
 <div class='col-md-7'>
-<form class="simple_form edit_score_list_print_generator" id="edit_score_list_print_generator_UUID" novalidate="novalidate" action="/2024/mv-cup/score/list_print_generators/UUID" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off" /><div class="form-group my-2 hidden score_list_print_generator_print_list form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="UUID
+<form class="simple_form edit_score_list_print_generator" id="edit_score_list_print_generator_UUID" novalidate="novalidate" action="/2024/mv-cup/score/list_print_generators/UUID" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off" /><div class="form-group hidden score_list_print_generator_print_list form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="UUID
 column" name="score_list_print_generator[print_list]" id="score_list_print_generator_print_list" /></div>
 <div class='card'>
 <div class='card-header p-0'>
