--- a/spec/fixtures/views/Score_List_create_lists_uses_list_factory-new-names/view.html
+++ b/spec/fixtures/views/Score_List_create_lists_uses_list_factory-new-names/view.html
@@ -134,16 +134,16 @@ Erweitert
 </div>
 <div class='card-body'>
 <form class="simple_form edit_score_list_factory" id="edit_score_list_factory" novalidate="novalidate" action="/2024/mv-cup/score/list_factories" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off" /><p>Der Name erscheint auf den erstellten PDFs in der Fußzeile. Die Abkürzung erscheint auf den Ergebnislisten als Spaltenbezeichnung.</p>
-<div class="form-group my-2 string optional score_list_factory_name"><label class="control-label string optional" for="score_list_factory_name">Name</label><input class="form-control string optional" value="Löschangriff Nass - Lauf 1" type="text" name="score_list_factory[name]" id="score_list_factory_name" /><small class="form-text text-muted">Vollständiger Name, sollte eindeutig sein</small></div>
-<div class="form-group my-2 string optional score_list_factory_shortcut"><label class="control-label string optional" for="score_list_factory_shortcut">Abkürzung</label><input class="form-control string optional" value="Lauf 1" type="text" name="score_list_factory[shortcut]" id="score_list_factory_shortcut" /><small class="form-text text-muted">z.B.: Lauf 1, Vorlauf oder Finale, max. 8 Zeichen</small></div>
-<div class="form-group my-2 hidden score_list_factory_next_step"><input class="form-control hidden" value="tracks" autocomplete="off" type="hidden" name="score_list_factory[next_step]" id="score_list_factory_next_step" /></div>
+<div class="form-group string optional score_list_factory_name"><label class="control-label string optional" for="score_list_factory_name">Name</label><input class="form-control string optional" value="Löschangriff Nass - Lauf 1" type="text" name="score_list_factory[name]" id="score_list_factory_name" /><small class="form-text text-muted">Vollständiger Name, sollte eindeutig sein</small></div>
+<div class="form-group string optional score_list_factory_shortcut"><label class="control-label string optional" for="score_list_factory_shortcut">Abkürzung</label><input class="form-control string optional" value="Lauf 1" type="text" name="score_list_factory[shortcut]" id="score_list_factory_shortcut" /><small class="form-text text-muted">z.B.: Lauf 1, Vorlauf oder Finale, max. 8 Zeichen</small></div>
+<div class="form-group hidden score_list_factory_next_step"><input class="form-control hidden" value="tracks" autocomplete="off" type="hidden" name="score_list_factory[next_step]" id="score_list_factory_next_step" /></div>
 <button name="button" type="submit" class="btn btn-primary mt-3" data-disable-with="Bitte warten...">Weiter</button>
 
 </form>
 </div>
 <div class='card-footer'>
 <div class='d-flex justify-content-between align-items-start'>
-<div><form class="simple_form edit_score_list_factory" id="edit_score_list_factory" novalidate="novalidate" action="/2024/mv-cup/score/list_factories" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off" /><div class="form-group my-2 hidden score_list_factory_next_step"><input class="form-control hidden" value="assessments" autocomplete="off" type="hidden" name="score_list_factory[next_step]" id="score_list_factory_next_step" /></div>
+<div><form class="simple_form edit_score_list_factory" id="edit_score_list_factory" novalidate="novalidate" action="/2024/mv-cup/score/list_factories" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off" /><div class="form-group hidden score_list_factory_next_step"><input class="form-control hidden" value="assessments" autocomplete="off" type="hidden" name="score_list_factory[next_step]" id="score_list_factory_next_step" /></div>
 <input type="submit" name="commit" value="Zurück" class="btn btn-light btn-sm" data-disable-with="Zurück" />
 <a data-turbo-method="delete" data-turbo-confirm="Listenerstellung abbrechen?" class=" btn btn-light btn-sm" href="/2024/mv-cup/score/list_factories">Abbrechen</a>
 </form></div>
