--- a/spec/fixtures/views/Score_List_create_lists_uses_list_factory-new-tracks/view.html
+++ b/spec/fixtures/views/Score_List_create_lists_uses_list_factory-new-tracks/view.html
@@ -133,15 +133,15 @@ Erweitert
 </div>
 </div>
 <div class='card-body'>
-<form class="simple_form edit_score_list_factory" id="edit_score_list_factory" novalidate="novalidate" action="/2024/mv-cup/score/list_factories" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off" /><div class="form-group my-2 integer optional score_list_factory_track_count"><label class="control-label integer optional" for="score_list_factory_track_count">Wettkampfbahnen</label><input class="form-control numeric integer optional" value="2" type="number" step="1" name="score_list_factory[track_count]" id="score_list_factory_track_count" /><small class="form-text text-muted">Anzahl der Bahnen auf denen gelaufen wird.</small></div>
-<div class="form-group my-2 hidden score_list_factory_next_step"><input class="form-control hidden" value="results" autocomplete="off" type="hidden" name="score_list_factory[next_step]" id="score_list_factory_next_step" /></div>
+<form class="simple_form edit_score_list_factory" id="edit_score_list_factory" novalidate="novalidate" action="/2024/mv-cup/score/list_factories" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off" /><div class="form-group integer optional score_list_factory_track_count"><label class="control-label integer optional" for="score_list_factory_track_count">Wettkampfbahnen</label><input class="form-control numeric integer optional" value="2" type="number" step="1" name="score_list_factory[track_count]" id="score_list_factory_track_count" /><small class="form-text text-muted">Anzahl der Bahnen auf denen gelaufen wird.</small></div>
+<div class="form-group hidden score_list_factory_next_step"><input class="form-control hidden" value="results" autocomplete="off" type="hidden" name="score_list_factory[next_step]" id="score_list_factory_next_step" /></div>
 <button name="button" type="submit" class="btn btn-primary mt-3" data-disable-with="Bitte warten...">Weiter</button>
 
 </form>
 </div>
 <div class='card-footer'>
 <div class='d-flex justify-content-between align-items-start'>
-<div><form class="simple_form edit_score_list_factory" id="edit_score_list_factory" novalidate="novalidate" action="/2024/mv-cup/score/list_factories" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off" /><div class="form-group my-2 hidden score_list_factory_next_step"><input class="form-control hidden" value="names" autocomplete="off" type="hidden" name="score_list_factory[next_step]" id="score_list_factory_next_step" /></div>
+<div><form class="simple_form edit_score_list_factory" id="edit_score_list_factory" novalidate="novalidate" action="/2024/mv-cup/score/list_factories" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off" /><div class="form-group hidden score_list_factory_next_step"><input class="form-control hidden" value="names" autocomplete="off" type="hidden" name="score_list_factory[next_step]" id="score_list_factory_next_step" /></div>
 <input type="submit" name="commit" value="Zurück" class="btn btn-light btn-sm" data-disable-with="Zurück" />
 <a data-turbo-method="delete" data-turbo-confirm="Listenerstellung abbrechen?" class=" btn btn-light btn-sm" href="/2024/mv-cup/score/list_factories">Abbrechen</a>
 </form></div>
