--- a/spec/fixtures/views/Score_List_create_lists_uses_list_factory-new/view.html
+++ b/spec/fixtures/views/Score_List_create_lists_uses_list_factory-new/view.html
@@ -132,8 +132,8 @@ Erweitert
 <h4 class='m-0 py-2 ps-3'>Startliste erstellen - Schritt 1</h4>
 </div>
 </div>
-<form class="simple_form new_score_list_factory" id="new_score_list_factory" novalidate="novalidate" action="/2024/mv-cup/score/list_factories" accept-charset="UTF-8" method="post"><div class="form-group my-2 hidden score_list_factory_discipline_id form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="UUID" name="score_list_factory[discipline_id]" id="score_list_factory_discipline_id" /></div>
-<div class="form-group my-2 hidden score_list_factory_next_step"><input class="form-control hidden" value="assessments" autocomplete="off" type="hidden" name="score_list_factory[next_step]" id="score_list_factory_next_step" /></div>
+<form class="simple_form new_score_list_factory" id="new_score_list_factory" novalidate="novalidate" action="/2024/mv-cup/score/list_factories" accept-charset="UTF-8" method="post"><div class="form-group hidden score_list_factory_discipline_id form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="UUID" name="score_list_factory[discipline_id]" id="score_list_factory_discipline_id" /></div>
+<div class="form-group hidden score_list_factory_next_step"><input class="form-control hidden" value="assessments" autocomplete="off" type="hidden" name="score_list_factory[next_step]" id="score_list_factory_next_step" /></div>
 <div class='card-body row'>
 <div class='col-md-5'>
 <img src="/assets/disciplines/hl.svg" width="40" height="40" />
@@ -144,8 +144,8 @@ Erweitert
 </div>
 </div>
 </div>
-</form><form class="simple_form new_score_list_factory" id="new_score_list_factory" novalidate="novalidate" action="/2024/mv-cup/score/list_factories" accept-charset="UTF-8" method="post"><div class="form-group my-2 hidden score_list_factory_discipline_id form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="UUID" name="score_list_factory[discipline_id]" id="score_list_factory_discipline_id" /></div>
-<div class="form-group my-2 hidden score_list_factory_next_step"><input class="form-control hidden" value="assessments" autocomplete="off" type="hidden" name="score_list_factory[next_step]" id="score_list_factory_next_step" /></div>
+</form><form class="simple_form new_score_list_factory" id="new_score_list_factory" novalidate="novalidate" action="/2024/mv-cup/score/list_factories" accept-charset="UTF-8" method="post"><div class="form-group hidden score_list_factory_discipline_id form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="UUID" name="score_list_factory[discipline_id]" id="score_list_factory_discipline_id" /></div>
+<div class="form-group hidden score_list_factory_next_step"><input class="form-control hidden" value="assessments" autocomplete="off" type="hidden" name="score_list_factory[next_step]" id="score_list_factory_next_step" /></div>
 <div class='card-body row'>
 <div class='col-md-5'>
 <img src="/assets/disciplines/la.svg" width="40" height="40" />
