--- a/spec/fixtures/views/Score_List_edit_list_shows_form_and_updates-show-team-destroy-dialog/view.html
+++ b/spec/fixtures/views/Score_List_edit_list_shows_form_and_updates-show-team-destroy-dialog/view.html
@@ -133,7 +133,7 @@ Erweitert
 </div>
 </div>
 <div class='card-body'>
-<div class="form-group my-2 hidden score_list_entries__destroy"><input class="form-control hidden" value="1" autocomplete="off" type="hidden" name="score_list[entries_attributes][0][_destroy]" id="score_list_entries_attributes_0__destroy" /></div>
+<div class="form-group hidden score_list_entries__destroy"><input class="form-control hidden" value="1" autocomplete="off" type="hidden" name="score_list[entries_attributes][0][_destroy]" id="score_list_entries_attributes_0__destroy" /></div>
 <p>Löschangriff Nass - Frauen - Lauf 1; Frauen-Team: Ungültig</p>
 <input autocomplete="off" type="hidden" value="UUID" name="score_list[entries_attributes][0][id]" id="score_list_entries_attributes_0_id" />
 </div>
