--- a/spec/fixtures/views/User_GET_users_confirmation_new_renders_form/view.html
+++ b/spec/fixtures/views/User_GET_users_confirmation_new_renders_form/view.html
@@ -84,7 +84,7 @@
 </div>
 <div class='card-body'>
 <div></div>
-<div class="form-group my-2 email required user_email"><label class="control-label email required" for="user_email">E-Mail-Adresse <abbr title="required">*</abbr></label><input class="form-control string email required" autocomplete="email" autofocus="autofocus" required="required" aria-required="true" type="email" name="user[email]" id="user_email" /></div>
+<div class="form-group email required user_email"><label class="control-label email required" for="user_email">E-Mail-Adresse <abbr title="required">*</abbr></label><input class="form-control string email required" autocomplete="email" autofocus="autofocus" required="required" aria-required="true" type="email" name="user[email]" id="user_email" /></div>
 
 </div>
 <div class='card-footer'>
