--- a/spec/fixtures/views/User_GET_users_password_edit_renders_the_password_reset_form/view.html
+++ b/spec/fixtures/views/User_GET_users_password_edit_renders_the_password_reset_form/view.html
@@ -83,10 +83,10 @@
 </div>
 </div>
 <div class='card-body'>
-<div class="form-group my-2 hidden user_reset_password_token form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="ABC" name="user[reset_password_token]" id="user_reset_password_token" /></div>
+<div class="form-group hidden user_reset_password_token form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="ABC" name="user[reset_password_token]" id="user_reset_password_token" /></div>
 <div></div>
-<div class="form-group my-2 password required user_password"><label class="control-label password required" for="user_password">Neues Passwort <abbr title="required">*</abbr></label><input class="form-control password required" autocomplete="new-password" autofocus="autofocus" required="required" aria-required="true" type="password" name="user[password]" id="user_password" /></div>
-<div class="form-group my-2 password required user_password_confirmation"><label class="control-label password required" for="user_password_confirmation">Passwortbestätigung <abbr title="required">*</abbr></label><input class="form-control password required" autocomplete="new-password" required="required" aria-required="true" type="password" name="user[password_confirmation]" id="user_password_confirmation" /></div>
+<div class="form-group password required user_password"><label class="control-label password required" for="user_password">Neues Passwort <abbr title="required">*</abbr></label><input class="form-control password required" autocomplete="new-password" autofocus="autofocus" required="required" aria-required="true" type="password" name="user[password]" id="user_password" /></div>
+<div class="form-group password required user_password_confirmation"><label class="control-label password required" for="user_password_confirmation">Passwortbestätigung <abbr title="required">*</abbr></label><input class="form-control password required" autocomplete="new-password" required="required" aria-required="true" type="password" name="user[password_confirmation]" id="user_password_confirmation" /></div>
 
 </div>
 <div class='card-footer'>
