--- a/spec/fixtures/views/User_GET_users_password_new_renders_the_password_forgotten_form/view.html
+++ b/spec/fixtures/views/User_GET_users_password_new_renders_the_password_forgotten_form/view.html
@@ -83,7 +83,7 @@
 </div>
 </div>
 <div class='card-body'>
-<div class="form-group my-2 email required user_email"><label class="control-label email required" for="user_email">E-Mail-Adresse <abbr title="required">*</abbr></label><input class="form-control string email required" autocomplete="email" autofocus="autofocus" required="required" aria-required="true" type="email" name="user[email]" id="user_email" /></div>
+<div class="form-group email required user_email"><label class="control-label email required" for="user_email">E-Mail-Adresse <abbr title="required">*</abbr></label><input class="form-control string email required" autocomplete="email" autofocus="autofocus" required="required" aria-required="true" type="email" name="user[email]" id="user_email" /></div>
 
 </div>
 <div class='card-footer'>
