--- a/spec/fixtures/views/competitions_documents_edit_documents_uses_CRUD-edit-error/view.html
+++ b/spec/fixtures/views/competitions_documents_edit_documents_uses_CRUD-edit-error/view.html
@@ -118,7 +118,7 @@ Erweitert
 </div>
 </div>
 <div class='card-body'>
-<div class="form-group my-2 string required document_title form-group-invalid"><label class="control-label string required" for="document_title">Titel <abbr title="required">*</abbr></label><input class="form-control is-invalid string required" aria-invalid="true" type="text" value="" name="document[title]" id="document_title" /><div class="invalid-feedback">Titel muss ausgefüllt werden</div><small class="form-text text-muted">Gib eine kurze Beschreibung der Datei an. Zum Beispiel: Ausschreibung</small></div>
+<div class="form-group string required document_title form-group-invalid"><label class="control-label string required" for="document_title">Titel <abbr title="required">*</abbr></label><input class="form-control is-invalid string required" aria-invalid="true" type="text" value="" name="document[title]" id="document_title" /><div class="invalid-feedback">Titel muss ausgefüllt werden</div><small class="form-text text-muted">Gib eine kurze Beschreibung der Datei an. Zum Beispiel: Ausschreibung</small></div>
 <div class="form-group file required document_file form-group-valid"><label class="file required" for="document_file">Datei <abbr title="required">*</abbr></label><input class="form-control file required" type="file" name="document[file]" id="document_file" /><small class="form-text text-muted">Wenn du eine neue Datei angibst, wird die vorhandene Datei ersetzt.</small></div>
 
 </div>
