--- a/spec/fixtures/views/competitions_score_runs_edit_run_shows_form_and_updates-edit/view.html
+++ b/spec/fixtures/views/competitions_score_runs_edit_run_shows_form_and_updates-edit/view.html
@@ -158,17 +158,17 @@ Erweitert
 
 </td>
 <td class='edit-time'>
-<div class="form-group my-2 hidden score_run_list_entries_track form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="1" name="score_run[list_entries_attributes][0][track]" id="score_run_list_entries_attributes_0_track" /></div>
+<div class="form-group hidden score_run_list_entries_track form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="1" name="score_run[list_entries_attributes][0][track]" id="score_run_list_entries_attributes_0_track" /></div>
 <div class='row'>
 <div class='col-md-4'>
 <div class='time-entries'>
-<div class="form-group my-2 second_time optional score_run_list_entries_edit_second_time"><label class="control-label second_time optional" for="score_run_list_entries_attributes_0_edit_second_time">Zeit in Sekunden</label><input class="form-control numeric second_time optional" autocomplete="off" step="0.01" type="number" value="" name="score_run[list_entries_attributes][0][edit_second_time]" id="score_run_list_entries_attributes_0_edit_second_time" /></div>
-<div class="form-group my-2 hidden score_run_list_entries_edit_second_time_before"><input class="form-control hidden" autocomplete="off" type="hidden" value="" name="score_run[list_entries_attributes][0][edit_second_time_before]" id="score_run_list_entries_attributes_0_edit_second_time_before" /></div>
+<div class="form-group second_time optional score_run_list_entries_edit_second_time"><label class="control-label second_time optional" for="score_run_list_entries_attributes_0_edit_second_time">Zeit in Sekunden</label><input class="form-control numeric second_time optional" autocomplete="off" step="0.01" type="number" value="" name="score_run[list_entries_attributes][0][edit_second_time]" id="score_run_list_entries_attributes_0_edit_second_time" /></div>
+<div class="form-group hidden score_run_list_entries_edit_second_time_before"><input class="form-control hidden" autocomplete="off" type="hidden" value="" name="score_run[list_entries_attributes][0][edit_second_time_before]" id="score_run_list_entries_attributes_0_edit_second_time_before" /></div>
 </div>
 </div>
 <div class='col-md-8'>
 <div class='time-types'>
-<div class="form-group my-2 hidden score_run_list_entries_result_type_before form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="waiting" name="score_run[list_entries_attributes][0][result_type_before]" id="score_run_list_entries_attributes_0_result_type_before" /></div>
+<div class="form-group hidden score_run_list_entries_result_type_before form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="waiting" name="score_run[list_entries_attributes][0][result_type_before]" id="score_run_list_entries_attributes_0_result_type_before" /></div>
 <input type="hidden" name="score_run[list_entries_attributes][0][result_type]" value="" autocomplete="off" /><span><input type="radio" value="waiting" checked="checked" name="score_run[list_entries_attributes][0][result_type]" id="score_run_list_entries_attributes_0_result_type_waiting" /><label class="collection_radio_buttons" for="score_run_list_entries_attributes_0_result_type_waiting">Ausstehend</label></span><span><input type="radio" value="valid" name="score_run[list_entries_attributes][0][result_type]" id="score_run_list_entries_attributes_0_result_type_valid" /><label class="collection_radio_buttons" for="score_run_list_entries_attributes_0_result_type_valid">Gültig</label></span><span><input type="radio" value="invalid" name="score_run[list_entries_attributes][0][result_type]" id="score_run_list_entries_attributes_0_result_type_invalid" /><label class="collection_radio_buttons" for="score_run_list_entries_attributes_0_result_type_invalid">Ungültig</label></span><span><input type="radio" value="no_run" name="score_run[list_entries_attributes][0][result_type]" id="score_run_list_entries_attributes_0_result_type_no_run" /><label class="collection_radio_buttons" for="score_run_list_entries_attributes_0_result_type_no_run">Nicht angetreten</label></span>
 </div>
 </div>
@@ -187,17 +187,17 @@ Erweitert
 
 </td>
 <td class='edit-time'>
-<div class="form-group my-2 hidden score_run_list_entries_track form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="2" name="score_run[list_entries_attributes][1][track]" id="score_run_list_entries_attributes_1_track" /></div>
+<div class="form-group hidden score_run_list_entries_track form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="2" name="score_run[list_entries_attributes][1][track]" id="score_run_list_entries_attributes_1_track" /></div>
 <div class='row'>
 <div class='col-md-4'>
 <div class='time-entries'>
-<div class="form-group my-2 second_time optional score_run_list_entries_edit_second_time"><label class="control-label second_time optional" for="score_run_list_entries_attributes_1_edit_second_time">Zeit in Sekunden</label><input class="form-control numeric second_time optional" autocomplete="off" step="0.01" type="number" value="" name="score_run[list_entries_attributes][1][edit_second_time]" id="score_run_list_entries_attributes_1_edit_second_time" /></div>
-<div class="form-group my-2 hidden score_run_list_entries_edit_second_time_before"><input class="form-control hidden" autocomplete="off" type="hidden" value="" name="score_run[list_entries_attributes][1][edit_second_time_before]" id="score_run_list_entries_attributes_1_edit_second_time_before" /></div>
+<div class="form-group second_time optional score_run_list_entries_edit_second_time"><label class="control-label second_time optional" for="score_run_list_entries_attributes_1_edit_second_time">Zeit in Sekunden</label><input class="form-control numeric second_time optional" autocomplete="off" step="0.01" type="number" value="" name="score_run[list_entries_attributes][1][edit_second_time]" id="score_run_list_entries_attributes_1_edit_second_time" /></div>
+<div class="form-group hidden score_run_list_entries_edit_second_time_before"><input class="form-control hidden" autocomplete="off" type="hidden" value="" name="score_run[list_entries_attributes][1][edit_second_time_before]" id="score_run_list_entries_attributes_1_edit_second_time_before" /></div>
 </div>
 </div>
 <div class='col-md-8'>
 <div class='time-types'>
-<div class="form-group my-2 hidden score_run_list_entries_result_type_before form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="waiting" name="score_run[list_entries_attributes][1][result_type_before]" id="score_run_list_entries_attributes_1_result_type_before" /></div>
+<div class="form-group hidden score_run_list_entries_result_type_before form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="waiting" name="score_run[list_entries_attributes][1][result_type_before]" id="score_run_list_entries_attributes_1_result_type_before" /></div>
 <input type="hidden" name="score_run[list_entries_attributes][1][result_type]" value="" autocomplete="off" /><span><input type="radio" value="waiting" checked="checked" name="score_run[list_entries_attributes][1][result_type]" id="score_run_list_entries_attributes_1_result_type_waiting" /><label class="collection_radio_buttons" for="score_run_list_entries_attributes_1_result_type_waiting">Ausstehend</label></span><span><input type="radio" value="valid" name="score_run[list_entries_attributes][1][result_type]" id="score_run_list_entries_attributes_1_result_type_valid" /><label class="collection_radio_buttons" for="score_run_list_entries_attributes_1_result_type_valid">Gültig</label></span><span><input type="radio" value="invalid" name="score_run[list_entries_attributes][1][result_type]" id="score_run_list_entries_attributes_1_result_type_invalid" /><label class="collection_radio_buttons" for="score_run_list_entries_attributes_1_result_type_invalid">Ungültig</label></span><span><input type="radio" value="no_run" name="score_run[list_entries_attributes][1][result_type]" id="score_run_list_entries_attributes_1_result_type_no_run" /><label class="collection_radio_buttons" for="score_run_list_entries_attributes_1_result_type_no_run">Nicht angetreten</label></span>
 </div>
 </div>
